fix/overflowing entry fields

--- a/src/components/quests/CreateQuestModal.css
+++ b/src/components/quests/CreateQuestModal.css
@@ -1,6 +1,5 @@
 /* src/components/quests/CreateQuestModal.css */
 
-/* Mirror AddMissionCard styling */
 .add-quest-overlay {
   position: fixed;
   top: 0;
@@ -41,6 +40,7 @@
   color: var(--color-text-dark);
   font-family: var(--font-family);
   transition: border-color var(--transition);
+  box-sizing: border-box;
 }
 
 .add-quest-title-input:focus {
@@ -73,6 +73,7 @@
   font-family: var(--font-family);
   resize: vertical;
   min-height: 60px;
+  box-sizing: border-box;
 }
 
 .add-quest-description-input:focus {
@@ -284,6 +285,7 @@
   font-size: var(--font-size-base);
   font-family: var(--font-family);
   color: var(--color-text-dark);
+  box-sizing: border-box;
 }
 
 .mission-input:focus {
